add more sections

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "author": "Ajay NS <ajay.ns@outlook.com>",
   "dependencies": {
     "@svgr/webpack": "^4.1.0",
+    "core-js": "^3.27.2",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-client-side-redirect": "^0.0.2",
-    "gatsby-plugin-google-analytics": "^2.3.3",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
